syntax = "proto3";

package turnly.channels.v1.signage_displays;

import "common.proto";

message SignageDisplay {
  string id = 1;
  string name = 2;
  string device_id = 3;
  string refresh_time_unit = 4;
  int32 refresh_time_value = 5;
  string location_id = 6;
  string organization_id = 7;
  string clear_tickets_after = 8;
  repeated string service_ids = 9;
  string order = 10;
}

message GetPairingCodeSignageDisplayResponse {
  SignageDisplay data = 1;
  turnly.common.v1.Meta meta = 2;
}

message PairToLocationSignageDisplayResponse {
  SignageDisplay data = 1;
  turnly.common.v1.Meta meta = 2;
}

message UnpairSignageDisplayResponse {
  SignageDisplay data = 1;
  turnly.common.v1.Meta meta = 2;
}
